--- a/aws/files/awslogs.conf
+++ b/aws/files/awslogs.conf
@@ -2,12 +2,12 @@
 
 [general]
 state_file = /var/awslogs/state/agent-state
-{% for log_group, log_file in aws.awslogs.log_files.items() %}
-[{{ log_group }}]
-datetime_format = %Y-%m-%d %H:%M:%S
-file = {{ log_file }}
+{% for file_name, file_path in aws.awslogs.files.items() %}
+[{{ aws.awslogs.stream_name }}_{{ file_name }}]
+datetime_format = {{ aws.awslogs.get('datetime_format', '%Y-%m-%dT%H:%M:%S.%f%z') }}
+file = {{ file_path }}
 buffer_duration = 5000
-log_stream_name = {{ grains[aws.awslogs.log_stream_id_grain] }}
+log_stream_name = {{ aws.awslogs.stream_name }}
 initial_position = start_of_file
-log_group_name = {{ aws.awslogs.log_group_prefix }}{{ log_group }}
+log_group_name = {{ aws.awslogs.group_name }}
 {% endfor %}
