--- a/aws/files/awslogs.conf
+++ b/aws/files/awslogs.conf
@@ -5,6 +5,7 @@ state_file = /var/awslogs/state/agent-state
 {% for file_name, file_path in aws.awslogs.files.items() %}
 [{{ aws.awslogs.stream_name }}:{{ file_name }}]
 datetime_format = {{ aws.awslogs.get('datetime_format', '%Y-%m-%dT%H:%M:%S.%f%z') }}
+time_zone = UTC
 file = {{ file_path }}
 buffer_duration = 5000
 log_stream_name = {{ aws.awslogs.stream_name }}:{{ file_name }}
