--- a/aws/files/awslogs.conf
+++ b/aws/files/awslogs.conf
@@ -3,12 +3,12 @@
 [general]
 state_file = /var/awslogs/state/agent-state
 {% for file_name, file_path in aws.awslogs.files.items() %}
-[{{ aws.awslogs.stream_name }}:{{ file_name }}]
+[{{ aws.awslogs.stream_name }}/{{ file_name }}]
 datetime_format = {{ aws.awslogs.get('datetime_format', '%Y-%m-%dT%H:%M:%S.%f%z') }}
 time_zone = UTC
 file = {{ file_path }}
 buffer_duration = 5000
-log_stream_name = {{ aws.awslogs.stream_name }}:{{ file_name }}
+log_stream_name = {{ aws.awslogs.stream_name }}/{{ file_name }}
 initial_position = start_of_file
 log_group_name = {{ aws.awslogs.group_name }}
 {% endfor %}
