--- a/aws/files/awslogs.conf
+++ b/aws/files/awslogs.conf
@@ -10,7 +10,7 @@ datetime_format = {{ stream_options.get('datetime_format', '%Y-%m-%dT%H:%M:%S.%f
 time_zone = {{ stream_options.get('time_zone', 'UTC') }}
 file = {{ file_path }}
 buffer_duration = {{ stream_options.get('buffer_duration', '5000') }}
-log_stream_name = {{ aws.awslogs.stream_name }}/{{ file_name }}
+log_stream_name = {{ stream_name }}/{{ file_name }}
 initial_position = {{ stream_options.get('initial_position', 'start_of_file') }}
 log_group_name = {{ group_name }}
 {% endfor %}
