--- a/aws/files/aws.conf
+++ b/aws/files/aws.conf
@@ -3,4 +3,4 @@
 [plugins]
 cwlogs = cwlogs
 [default]
-region = {{ aws.awslogs.get('region', 'eu-west-3') }}
+region = {{ aws.get('region', 'eu-west-3') }}
