--- a/aws/files/awslogs.conf
+++ b/aws/files/awslogs.conf
@@ -2,8 +2,8 @@
 
 [general]
 state_file = /var/awslogs/state/agent-state
-{% for group_name, group_options in aws.awslogs.items() -%}
-{% for stream_name, stream_options in group_options.get('streams', {}).items() -%}
+{% for group_name, group_options in aws.awslogs.items() %}
+{% for stream_name, stream_options in group_options.get('streams', {}).items() %}
 {% for file_name, file_path in stream_options.get('files', {}).items() %}
 [{{ stream_name }}/{{ file_name }}]
 datetime_format = {{ stream_options.get('datetime_format', '%Y-%m-%dT%H:%M:%S.%f%z') }}
@@ -14,5 +14,5 @@ log_stream_name = {{ stream_name }}/{{ file_name }}
 initial_position = {{ stream_options.get('initial_position', 'start_of_file') }}
 log_group_name = {{ group_name }}
 {% endfor %}
-{%- endfor %}
-{%- endfor %}
+{% endfor %}
+{% endfor %}
