--- a/aws/files/awslogs.conf
+++ b/aws/files/awslogs.conf
@@ -1,5 +1,8 @@
 {% from "aws/map.jinja" import aws with context %}
 
+### SALT MANAGED FILE ###
+### PLEASE DO NOT EDIT ###
+
 [general]
 state_file = /var/awslogs/state/agent-state
 {% for group_name, group_options in aws.awslogs.items() -%}
