--- a/aws/files/awslogs.conf
+++ b/aws/files/awslogs.conf
@@ -14,7 +14,7 @@ time_zone = {{ stream_options.get('time_zone', 'UTC') }}
 file = {{ file_path }}
 buffer_duration = {{ stream_options.get('buffer_duration', '5000') }}
 log_stream_name = {{ stream_name }}/{{ file_name }}
-initial_position = {{ stream_options.get('initial_position', 'start_of_file') }}
+initial_position = {{ stream_options.get('initial_position', 'end_of_file') }}
 log_group_name = {{ group_name }}
 {% endfor %}
 {%- endfor %}
